<resources>
    <string name="app_name">GithubUserSubmission2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="username">Username : </string>
    <string name="name">Name : </string>
    <string name="location">Location : </string>
    <string name="repository">Repository</string>
    <string name="company">Company : </string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="avatar">Avatar</string>
</resources>